a few more updates

--- a/unfinished/kirby-1/chapter.tex
+++ b/unfinished/kirby-1/chapter.tex
@@ -48,12 +48,12 @@ approximating spaces and degrees of freedom, many of which are
 surveyed in Chapter~\ref{chap:kirby-6}.
 Some applications, such as Cahn-Hilliard and
 other fourth-order problems, can benefit from very smooth finite
-element bases.  While porous media flow requires
+element bases,  while porous media flow requires
 vector fields discretized by piecewise polynomial functions with
 only normal components continuous across cell boundaries.  Many problems in
 electromagnetism call for the tangentially continuous vector fields obtained
 by using \nedelec\ elements~\citep{Nedelec1980,Nedelec1986}.  Many elements are carefully designed
-to satisfy the \emph{inf-sup} condition~\citep{BrezziFortin1991,GiraultRaviart1986},
+to satisfy a \emph{inf-sup} condition~\citep{BrezziFortin1991,GiraultRaviart1986},
 originally developed to explain stability of discretizations of
 incompressible flow problems.  Additionally, some problems call for low-order
 discretizations, while others are effectively solved with high-order
@@ -639,46 +639,46 @@ the original basis \( \{ \psi_i \}_{i=1}^{n} \).
 \subsection{Evaluation}
 In order to evaluate the nodal basis \( \{ \phi_i \}_{i=1}^{n} \)
 at a given point \( x \in T \), one simply computes the vector
-\[
+\begin{equation}
 \Psi_i = \psi_i(x)
-\]
+\end{equation}
 followed by the product
-\[
+\begin{equation}
 \phi_i(x) \equiv \Phi_i = A_{ij} \Psi_j.
-\]
+\end{equation}
 Generally, the nodal basis functions are required at an array of
 points \( \{ x_j \}_{j=1}^{m} \subset T \).  For performance reasons,
 performing matrix-matrix products may be advantageous.  So, define
 \( \Psi_{ij} = \Psi_i(x_j) \)  and \( \Phi_{ij} = \Phi_i(x_j) \).
 Then all of the nodal basis functions may be evaluated by the
 product
-\[
+\begin{equation}
 \Phi_{ij} = A_{ik} \Psi_{kj}.
-\]
+\end{equation}
 \subsection{Differentiation}
 Differentiation is more complicated and presents more options.
 Let \( \alpha = ( \alpha_1 , \alpha_2 , \dots \alpha_d ) \) be a
 multi-index so that
-\[
+\begin{equation}
 D^\alpha \equiv \frac{\partial^{|\alpha|}}{\partial
   x_1^{\alpha_1} \partial x_2^{\alpha_2} \dots \partial x_d^{\alpha_d}},
-\]
+\end{equation}
 where \( |\alpha| = \sum_{i=1}^{d} \alpha_i \) and we want 
 to compute the array
-\[
+\begin{equation}
 \Phi^\alpha_i = D^\alpha \phi_i(x)
-\]
+\end{equation}
 for some \( x \in T \).
 
 One obvious option is to differentiate the
 original basis functions \( \{ \psi_i \} \) to produce an array
-\[
+\begin{equation}
 \Psi^\alpha_i = D^\alpha \psi_i(x),
-\]
+\end{equation}
 whence
-\[
+\begin{equation}
 \Phi^\alpha_i = A_{ij} \Psi^\alpha_i.
-\]
+\end{equation}
 This presupposes that one may conveniently compute all derivatives of
 the \( \{ \psi_i \} \).  This is typically true in symbolic
 computation or when using the the power basis.  
@@ -695,16 +695,17 @@ may also compute matrices that encode first derivatives acting on the
 \( \{ \phi_i \} \) and construct higher derivatives than these.
 For each coordinate direction \( x_k \), a matrix \( \mathrm{D}^k \)
 is constructed so that
-\[
+\begin{equation}
 \frac{\partial \phi_i}{\partial x_i} =
 D^k_{ij} \phi_j.
-\]
+\end{equation}
 How to do this depends on which bases are chosen.  For particular
-details on the Dubiner basis, see~\citep{Dubiner1991}.  Then, \( \Psi^\alpha \)
-may be computed by
-\[
-\Psi^\alpha_i = (\mathrm{D}^\alpha A)_{ij} \Phi_{j},
-\]
+details on the Dubiner basis, see~\citep{Dubiner1991}.  
+%Then, \( \Psi^\alpha \)
+%may be computed by
+%\[
+%\Psi^\alpha_i = (\mathrm{D}^\alpha A)_{ij} \Phi_{j},
+%\]
 
 \subsection{Integration}
 Integration of basis functions over the reference domain, including products of
