update bib according to lopes

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1007,6 +1007,18 @@ MRREVIEWER = {Timothy Nigel Phillips},
   timestamp = {2009.06.06}
 }
 
+@ARTICLE{BejiNadaoka1996,
+ title = {A Formal Derivation and Numerical Modelling of the Improved {B}oussinesq Equations for Varying Depth},
+ volume = {23},
+ issn = {0029-8018},
+ number = {8},
+ journal = {Ocean engineering},
+ author = {S. Beji and K. Nadaoka},
+ year = {1996},
+pages = {691}
+}
+
+
 @MISC{BellOlsonSchroder2009,
   author = {N. Bell and L. Olson and J. Schroder},
   title = {PyAMG -- Algebraic multigrid solvers in Python},
@@ -4738,6 +4750,21 @@ MRREVIEWER = {Timothy Nigel Phillips},
   url = {http://www.pubmedcentral.gov/articlerender.fcgi?tool=pubmed&pubmedid=2156577}
 }
 
+@ARTICLE{LangtangenPedersen1998,
+title = {Computational models for weakly dispersive nonlinear water waves},
+journal = {Computer Methods in Applied Mechanics and Engineering},
+volume = {160},
+number = {3-4},
+pages = {337 - 358},
+year = {1998},
+issn = {0045-7825},
+doi = {DOI: 10.1016/S0045-7825(98)00293-X},
+url = {http://www.sciencedirect.com/science/article/B6V29-3WV3TR5-8/2/e1a67a14cc3962570b43c484be62994f},
+author = {Hans Petter Langtangen and Geir Pedersen}
+}
+
+
+
 @INPROCEEDINGS{Langtangen2007,
   author = {H. P. Langtangen},
   title = {A Case Study in High-Performance Mixed-Language Programming},
@@ -5669,6 +5696,19 @@ MRREVIEWER = {Timothy Nigel Phillips},
   number = {256}
 }
 
+@ARTICLE{LovholtPedersen2009,
+	title = {Instabilities of Boussinesq models in non-uniform depth},
+	volume = {61},
+	issn = {0271-2091},
+	number = {6},
+	journal = {International journal for numerical methods in fluids},
+	 author={F. L{\o}vholt and G. Pedersen},
+	year = {2009},
+	pages = {606--637}
+}
+
+
+
 @BOOK{LucaMVenezianiEtAl2009,
   title = {Cardiovascular Mathematics},
   publisher = {Springer},
@@ -5704,6 +5744,13 @@ MRREVIEWER = {Timothy Nigel Phillips},
   issn = {1019-7168}
 }
 
+@ELECTRONIC{LynettLiu2004,
+ author= {Patrick J. Lynett and Philip L.-F. Liu},
+ title={COULWAVE Model Page},
+ year={2004},
+ url={https://ceprofs.civil.tamu.edu/plynett/COULWAVE/default.htm}
+}
+
 @ARTICLE{Mackie1992,
   author = {R. I. Mackie},
   title = {Object Oriented Programming of the Finite Element Method},
@@ -5714,6 +5761,21 @@ MRREVIEWER = {Timothy Nigel Phillips},
   owner = {logg},
   timestamp = {2009.06.06}
 }
+
+@ARTICLE{MadsenEtAl1991,
+ title = {A new form of the Boussinesq equations with improved linear dispersion characteristics},
+ journal = {Coastal Engineering},
+volume = {15},
+number = {4},
+pages = {371 - 388},
+year = {1991},
+issn = {0378-3839},
+doi = {DOI: 10.1016/0378-3839(91)90017-B},
+url = {http://www.sciencedirect.com/science/article/B6VCX-481DV3Y-39/2/c10916856a189598fdf0f2b5cdd8da62},
+author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
+}
+
+
 
 @ARTICLE{MadsenAgnon2003,
   author = {Madsen, P. A. and Agnon, Y.},
@@ -6591,6 +6653,17 @@ MRREVIEWER = {Timothy Nigel Phillips},
   address = {Nice, France},
   url = {http://dx.doi.org/10.1145/1190216.1190242}
 }
+
+@TECHREPORT{PedersenLovholt2008,
+ author={G. Pedersen and F. L{\o}vholt},
+ title={Documentation of a global {B}oussinesq solver},
+ publisher={Dept. of Math. University of Oslo},
+ series={E-print, Mechanics and Applied Mathemathics, No. 1},
+ isbn={0809-4403},
+ year={2008},
+ url={http://www.math.uio.no/eprint/appl_math/2008/01-08.html}
+}
+
 
 @BOOK{PelosiCoccioliSelleri1998,
   title = {Quick Finite Elements for Electromagnetic Waves},
@@ -8137,6 +8210,44 @@ MRREVIEWER = {Timothy Nigel Phillips},
   owner = {logg},
   timestamp = {2009.06.07}
 }
+
+@ARTICLE{WooLiu2004a,
+  author = {S.-B. Woo  and P.L.-F. Liu},
+  title = {Finite Element Model for Modified {B}oussinesq Equations I: Model
+	Development},
+  journal = {Journal of Waterway, Port, Coastal and Ocean Engineering },
+  year = {2004},
+  volume = {130},
+  pages = {1-16},
+  number = {1},
+  owner = {logg},
+  timestamp = {2009.06.07}
+}
+
+@ARTICLE{WooLiu2004b,
+  author = {S.-B. Woo  and P.L.-F. Liu},
+  title = {Finite Element Model for Modified {B}oussinesq Equations II: Applications to Nonlinear Harbor Oscillations},
+  journal = {Journal of Waterway, Port, Coastal and Ocean Engineering },
+  year = {2004},
+  volume = {130},
+  pages = {17-28},
+  number = {1},
+  owner = {logg},
+  timestamp = {2009.06.07}
+}
+
+
+@ARTICLE{Wu1981,
+ author={Theodore Y. Wu},
+ journal={Journal of the Engineering Mechanics Division},
+ series={Proceedings of the American Society of Civil Engineers},
+ volume={107},
+ number={3},
+ pages={501-522},
+ year={1981}
+}
+
+
 
 @MISC{www:weave,
   author = {Weave},
