--- a/book.tex
+++ b/book.tex
@@ -46,7 +46,7 @@
 
 \fenicsinput{kirby-7}
 \fenicsinput{kirby-6}
-%\fenicsinput{kirby-1}
+%%%\fenicsinput{kirby-1}
 \fenicsinput{kirby-5}
 \fenicsinput{logg-3}
 %%%\fenicsinput{oelgaard-2}
@@ -62,7 +62,7 @@
 %%%\fenicsinput{kirby-2}
 %%%\fenicsinput{wilbers}
 \fenicsinput{alnes-3}
-%\fenicsinput{alnes-2}
+%%%\fenicsinput{alnes-2}
 \fenicsinput{alnes-1}
 %%%\fenicsinput{hoffman-2}
 %%%\fenicsinput{mardal-2}
@@ -82,7 +82,7 @@
 %%%\fenicsinput{oelgaard-1}
 %%%\fenicsinput{nikbakht}
 \fenicsinput{schroll}
-%\fenicsinput{hake}
+%%%\fenicsinput{hake}
 %%%\fenicsinput{lezar}
 \fenicsinput{mardal-4}
 \fenicsinput{rognes}
