Add environment 'progoutput' for displaying program output.

--- a/packages/codehighlight.sty
+++ b/packages/codehighlight.sty
@@ -251,14 +251,13 @@ aboveskip=1ex,
 frame=trbl,
 framesep=.3ex,
 rulecolor=\color{black!40},
-backgroundcolor=\color{yellow!10}
+backgroundcolor=\color{white!10}
 }
 
 \newcommand{\inputgencode}[1]{\lstinputlisting[style=cppstyle, title={\codetitlestyle{Generated code}}, belowcaptionskip=\belowtitleskip]{#1}}
-
 \lstnewenvironment{gencode}[1][]{\lstset{style=gencodestyle, title={\codetitlestyle{Generated code}}, belowcaptionskip=\belowtitleskip}}{}
 
+\lstnewenvironment{progoutput}[1][]{\lstset{style=gencodestyle, title={\codetitlestyle{Output}}, belowcaptionskip=\belowtitleskip}}{}
+
 \newcommand{\inputswig}[1]{\lstinputlisting[style=cppstyle, title={\codetitlestyle{SWIG code}}, belowcaptionskip=\belowtitleskip]{#1}}
-
 \lstnewenvironment{swigcode}[1][]{\lstset{style=cppstyle, title={\codetitlestyle{SWIG code}}, belowcaptionskip=\belowtitleskip}}{}
-
