Include chapter [langtangen]

--- a/book.tex
+++ b/book.tex
@@ -39,8 +39,8 @@
 
 %------------------------------------------------------------------------------
 
-%\input{chapters/intro/chapter.tex}
-%%%\fenicsinput{langtangen}
+\input{chapters/intro/chapter.tex}
+\fenicsinput{langtangen}
 
 \part{Methodology}
 
@@ -82,10 +82,11 @@
 %%%\fenicsinput{oelgaard-1}
 %%%\fenicsinput{nikbakht}
 \fenicsinput{schroll}
-%%%\fenicsinput{hake}
+\fenicsinput{hake}
 %%%\fenicsinput{lezar}
 \fenicsinput{mardal-4}
 \fenicsinput{rognes}
+
 %------------------------------------------------------------------------------
 % Start backmatter
 \backmatter
