Edit and include chapter [nikbakht]

--- a/book.tex
+++ b/book.tex
@@ -80,7 +80,7 @@
 %%%\fenicsinput{hentschel}
 \fenicsinput{narayanan}
 %%%\fenicsinput{oelgaard-1}
-%%%\fenicsinput{nikbakht}
+\fenicsinput{nikbakht}
 \fenicsinput{schroll}
 \fenicsinput{hake}
 %%%\fenicsinput{lezar}
