Edit and include chapter [wilbers]

--- a/book.tex
+++ b/book.tex
@@ -39,6 +39,9 @@
 
 %------------------------------------------------------------------------------
 
+% Use to test individual chapter
+%\fenicsinput{foo}\end{fullwidth}\end{document}
+
 \input{chapters/intro/chapter.tex}
 \fenicsinput{langtangen}
 
@@ -60,7 +63,7 @@
 \fenicsinput{logg-1}
 \fenicsinput{kirby-3}
 %%%\fenicsinput{kirby-2}
-%%%\fenicsinput{wilbers}
+\fenicsinput{wilbers}
 \fenicsinput{alnes-3}
 %%%\fenicsinput{alnes-2}
 \fenicsinput{alnes-1}
