--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2,25 +2,17 @@
 % Encoding: UTF8
 
 @article {Dubiner1991,
-   AUTHOR = {Dubiner, Moshe},
-    TITLE = {Spectral methods on triangles and other domains},
- JOURNAL = {Journal of Scientific Computing},
-   VOLUME = {6},
-     YEAR = {1991},
-   NUMBER = {4},
-    PAGES = {345--390},
-     ISSN = {0885-7474},
-    CODEN = {JSCOEB},
-  MRCLASS = {76M25 (65N35 76D05)},
- MRNUMBER = {MR1154903 (92k:76061)},
-MRREVIEWER = {Timothy Nigel Phillips},
+  AUTHOR = {Dubiner, Moshe},
+  TITLE = {Spectral methods on triangles and other domains},
+  JOURNAL = {Journal of Scientific Computing},
+  VOLUME = {6},
+   YEAR = {1991},
+  NUMBER = {4},
+  PAGES = {345--390},
 }
 
-
-
-
 @book{SzaboBabuska1991,
- title={{Finite element analysis}},
+ title={Finite element analysis},
  author={Szab{\'o}, B. and Szab{\'o}, B.A. and Babus̆ka, I.},
  isbn={0471502731},
  year={1991},
@@ -130,26 +122,22 @@ MRREVIEWER = {Timothy Nigel Phillips},
 
 @article{Manteuffel1980,
   title={An incomplete factorization technique for positive definite linear systems},
-  author={Manteuffel, TA},
+  author={Manteuffel, T. A.},
   journal={Mathematics of Computation},
   volume={34},
   number={150},
   pages={473--497},
-  issn={0025-5718},
   year={1980},
-  publisher={American Mathematical Society}
 }
 
 @article{Saad1994,
-  title={ILUT: A dual threshold incomplete LU factorization},
+  title={{ILUT}: {A} dual threshold incomplete {LU} factorization},
   author={Saad, Y.},
-  journal={Numerical linear algebra with applications},
+  journal={Numerical Linear Algebra with Applications},
   volume={1},
   number={4},
   pages={387--402},
-  issn={1099-1506},
   year={1994},
-  publisher={Wiley Online Library}
 }
 
 @book{Gray1897,
@@ -186,12 +174,6 @@ MRREVIEWER = {Timothy Nigel Phillips},
   url = {http://www.gnu.org/software/ddd},
 }
 
-
-
-
-
-
-
 @MISC{www:weave,
   title = {Software package},
   author = {Weave},
@@ -224,7 +206,7 @@ MRREVIEWER = {Timothy Nigel Phillips},
 
 @BOOK{SolinSegethDolevzel2004,
   title = {Higher-order finite element methods},
-  publisher = {Chapman \& Hall/CRC, Boca Raton, FL},
+  publisher = {Chapman \& Hall/CRC},
   year = {2004},
   author = {{\v{S}}ol{\'{\i}}n, Pavel and Segeth, Karel and Dole{\v{z}}el, Ivo},
   pages = {xxii+382},
@@ -266,13 +248,6 @@ MRREVIEWER = {Timothy Nigel Phillips},
   volume = {22},
   pages = {327--346},
   number = {3},
-  coden = {CMMECC},
-  fjournal = {Computer Methods in Applied Mechanics and Engineering},
-  issn = {0045-7825},
-  mrclass = {78A25 (65N30)},
-  mrnumber = {MR579675 (81e:78008)},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @BOOK{Aechtner2009,
@@ -281,8 +256,6 @@ MRREVIEWER = {Timothy Nigel Phillips},
   year = {2009},
   pages = {3493--3507},
   number = {37-40},
-  file = {:AinsworthDmekowiczKim2007.pdf:PDF},
-  owner = {massing},
   publisher = {Elsevier},
   timestamp = {2009.05.27}
 }
@@ -320,10 +293,7 @@ MRREVIEWER = {Timothy Nigel Phillips},
   volume = {65},
   pages = {23--50},
   number = {1},
-  file = {:AinsworthOden1993.pdf:PDF},
-  owner = {massing},
   publisher = {Springer},
-  timestamp = {2009.05.27}
 }
 
 @ARTICLE{AlastrueyParkerPeiroEtAl2007,
@@ -366,8 +336,6 @@ MRREVIEWER = {Timothy Nigel Phillips},
   author = {M. Aln\ae{}s and H. P. Langtangen and A. Logg and K.-A. Mardal and
 	O. Skavhaug},
   year = {2007},
-  owner = {logg},
-  timestamp = {2009.06.06},
   url = {http://www.fenics.org/ufc/}
 }
 
@@ -375,8 +343,6 @@ MRREVIEWER = {Timothy Nigel Phillips},
   title = {{S}y{F}i},
   author = {M. Aln\ae{}s and Kent-Andre Mardal},
   year = {2006},
-  owner = {logg},
-  timestamp = {2009.06.06},
   url = {http://www.fenics.org/syfi/}
 }
 
@@ -462,10 +428,6 @@ MRREVIEWER = {Timothy Nigel Phillips},
   pages = {87-101},
   address = {NO-7005 Trondheim},
   publisher = {Tapir Academic Press},
-  isbn = {978-82-519-2235-7},
-  owner = {logg},
-  timestamp = {2009.06.07},
-  totalpages = {330},
   url = {http://simula.no/research/scientific/publications/Simula.SC.22/downloadPdfFile}
 }
 
@@ -492,8 +454,6 @@ MRREVIEWER = {Timothy Nigel Phillips},
   author = {{American Heart Association}},
   title = {Heart and Stroke Facts},
   year = {2003},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{ArbogastDawsonKeenanEtAl1998,
@@ -4783,7 +4743,7 @@ author = {Hans Petter Langtangen and Geir Pedersen}
   pages = {Tutorial},
   title = {Automated Solution of Differential Equations},
   year = {2010},
-  editor = {Anders Logg and Garth Wells and Kent Andr{\'e} Mardal},
+  editor = {Anders Logg and Garth N. Wells and Kent Andr{\'e} Mardal},
   author = {Hans Petter Langtangen}
 }
 
@@ -5572,13 +5532,6 @@ author = {Hans Petter Langtangen and Geir Pedersen}
   url = {http://dx.doi.org/10.1145/1731022.1731030}
 }
 
-@MANUAL{manual:dolfin,
-  title = {{DOLFIN} User Manual},
-  author = {A. Logg and G. N. Wells and others},
-  year = {2009},
-  url = {http://www.fenics.org/dolfin/}
-}
-
 @ARTICLE{LoghinWathen2004,
   author = {D. Loghin and A. J. Wathen},
   title = {Analysis of preconditioners for saddle-point problems},
@@ -6326,7 +6279,8 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   year = {2009},
   volume = {2},
   pages = {1008--1030},
-  number = {3}
+  number = {3},
+  url = {http://dx.doi.org/10.3390/a2031008}
 }
 
 @UNPUBLISHED{NilsenCaiHoylandEtAl2008,
@@ -7607,10 +7561,6 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   volume = {84},
   pages = {266-75},
   number = {3},
-  month = {Feb},
-  file = {Soel_1999_266.pdf:Soel_1999_266.pdf:PDF},
-  key = {50},
-  timestamp = {2009.08.10},
   url = {http://circres.ahajournals.org/cgi/content/full/84/3/266}
 }
 
@@ -7661,10 +7611,6 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   volume = {63},
   pages = {139--148},
   number = {1},
-  file = {:Stenberg1995.pdf:PDF},
-  owner = {massing},
-  publisher = {Antwerp: Koninklijke Vlaamse Ingenieursvereniging, 1985-},
-  timestamp = {2009.05.11}
 }
 
 @ARTICLE{Stenberg1984,
@@ -7779,29 +7725,6 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   url = {http://www.swig.org}
 }
 
-@ARTICLE{SA¶derlind2003,
-  author = {Gustaf SÃ¶derlind},
-  title = {Digital Filters in Adaptive Time-Stepping},
-  journal = {ACM Trans. Math. Softw.},
-  year = {2003},
-  volume = {29},
-  pages = {1--26},
-  number = {1},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@ARTICLE{SA¶derlind1998,
-  author = {G. SÃ¶derlind},
-  title = {The Automatic Control of Numerical Integration},
-  journal = {CWI Quarterly},
-  year = {1998},
-  volume = {11},
-  pages = {55--74},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
 @ARTICLE{Tadjouddine2008,
   author = {E. M. Tadjouddine},
   title = {Vertex-ordering Algorithms for Automatic Differentiation of Computer
@@ -7828,17 +7751,13 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 
 @ARTICLE{TanakaKashiyama2006,
   author = {Tanaka, S. and Kashiyama, K.},
-  title = {{ALE} finite element method for FSI problems with free surface using
+  title = {{ALE} finite element method for {FSI} problems with free surface using
 	mesh re-generation method based on background mesh},
   journal = {International Journal of Computational Fluid Dynamics},
   year = {2006},
   volume = {20},
   pages = {229--236},
   number = {3},
-  file = {:TanakaKashiyama2006.pdf:PDF},
-  owner = {massing},
-  publisher = {Taylor \& Francis},
-  timestamp = {2009.05.13}
 }
 
 @ARTICLE{TanskanenGreensteinChenEtAl2007,
@@ -7864,11 +7783,6 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   volume = {1},
   pages = {73--100},
   number = {1},
-  fjournal = {Computers \& Fluids. An International Journal},
-  issn = {0045-7930},
-  mrclass = {76.65},
-  mrnumber = {MR0339677 (49 \#4435)},
-  mrreviewer = {Nima Geffen}
 }
 
 @ARTICLE{Temam1969,
@@ -7899,8 +7813,6 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   volume = {59},
   pages = {307--325},
   number = {3},
-  file = {Tezd_1986_307.pdf:Tezd_1986_307.pdf:PDF;Tezd_1986_307.pdf:Tezd_1986_307.pdf:PDF},
-  timestamp = {2009.07.02}
 }
 
 @BOOK{Trefethen2006,
@@ -7918,9 +7830,9 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 }
 
 @BOOK{TrottenbergOosterleeSchuller2001,
-  title = { Multigrid },
-  publisher = { Academic Press},
-  year = { 2001 },
+  title = {Multigrid},
+  publisher = {Academic Press},
+  year = {2001},
   author = {U. Trottenberg and C. Oosterlee and A. Schuller}
 }
 
@@ -7975,7 +7887,7 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   booktitle = {Automated Scientific Computing},
   editor = {Anders Logg, Kent-Andre Mardal, Garth Wells},
   publisher = {Springer},
-  title = { A Note on the Efficiency and Accuracy of Some Common Finite Element
+  title = {A Note on the Efficiency and Accuracy of Some Common Finite Element
 	Schemes for the Incompressible Navier--Stokes Equations},
   year = {2009}
 }
@@ -8310,7 +8222,8 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   year = {2001},
   volume = {50},
   pages = {2667--2682},
-  number = {12}
+  number = {12},
+  url = {http://dx.doi.org/10.1002/nme.143}
 }
 
 @BOOK{WeltyWicksWilson2001,
@@ -8321,12 +8234,10 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 }
 
 @BOOK{Wesseling1992,
-  title = {An introduction to multigrid methods},
-  publisher = {Wiley Chichester},
+  title = {An Introduction to Multigrid Methods},
+  publisher = {Wiley \& Sons},
   year = {1992},
   author = {Wesseling, P.},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @MISC{WestlieMardalAlnaes2009,
@@ -8348,9 +8259,10 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 }
 
 @BOOK{White1999,
-  title = {Fluid Mechanics, 4th ed.},
-  publisher = {McGraw-Hill, International Editions},
+  title = {Fluid Mechanics},
+  publisher = {McGraw-Hill},
   year = {1999},
+  edition = {fourth},
   author = {F. M. White}
 }
 
@@ -8363,7 +8275,7 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 
 @BOOK{Whitham1974,
   title = {Linear and nonlinear waves},
-  publisher = {Wiley-Interscience [John Wiley \& Sons]},
+  publisher = {John Wiley \& Sons},
   year = {1974},
   author = {Whitham, G. B.},
   address = {New York},
@@ -8541,8 +8453,9 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 }
 
 @BOOK{ZienkiewiczTaylorZhu2005firstpublishedin1967,
-  title = {The Finite Element Method --- Its Basis and Fundamentals, 6th edition},
+  title = {The Finite Element Method --- Its Basis and Fundamentals},
   publisher = {Elsevier},
+  edition = {6th},
   year = {2005},
   author = {O. C. Zienkiewicz and R. L. Taylor and J. Z. Zhu},
 }
@@ -8555,9 +8468,6 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   year = {1987},
   volume = {24},
   number = {2},
-  owner = {logg},
-  publisher = {John Wiley \& Sons, Ltd New York},
-  timestamp = {2009.06.06}
 }
 
 @BOOK{ArgeBruasetEtAl1997,
@@ -8567,26 +8477,6 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   editor = {S. E. Arge and A. M. Bruaset and H. P. Langtangen},
   owner = {logg},
   timestamp = {2009.06.06}
-}
-
-@BOOK{BA¼ckerCorlissEtAl2006,
-  title = {Automatic Differentiation: Applications, Theory and Implementations},
-  publisher = {Springer TODO},
-  year = {2006},
-  editor = {Martin BÃ¼cker and George Corliss and Paul Hovland and Uwe Naumann
-	and Boyana Norris},
-  owner = {logg},
-  timestamp = {2009.06.07}
-}
-
-@BOOK{CorlissFaureEtAl2002,
-  title = {Automatic Differentiation of Algorithms},
-  publisher = {TODO},
-  year = {2002},
-  editor = {George Corliss and ChristÃ¨le Faure and Andreas Griewank and Laurent
-	HascoÃ«t and Uwe Naumann},
-  owner = {logg},
-  timestamp = {2009.06.07}
 }
 
 @ELECTRONIC{cfd-online,
