--- a/book.tex
+++ b/book.tex
@@ -74,7 +74,7 @@
 
 %%%\fenicsinput{terrel}
 \fenicsinput{kvs-1}
-%%%\fenicsinput{mortensen}
+\fenicsinput{mortensen}
 %%%\fenicsinput{hoffman-1}
 %%%\fenicsinput{selim}
 %%%\fenicsinput{shan}
