Edit and include chapter [hentschel]

--- a/book.tex
+++ b/book.tex
@@ -80,7 +80,7 @@
 %%%\fenicsinput{shan}
 %%%\fenicsinput{lopes}
 \fenicsinput{kvs-2}
-%%%\fenicsinput{hentschel}
+\fenicsinput{hentschel}
 \fenicsinput{narayanan}
 %%%\fenicsinput{oelgaard-1}
 \fenicsinput{nikbakht}
