Edit and include chapter [lezar]

--- a/TODO
+++ b/TODO
@@ -38,3 +38,4 @@ Things to discuss
 * Fix width of C++ and Python code environments, seem different
 * Use \toprule, \midrule, \bottomrule in tables
 * Should there be , after and?
+* foo or foo() in text when referring to functions?
