--- a/book.tex
+++ b/book.tex
@@ -86,7 +86,7 @@
 \fenicsinput{nikbakht}
 \fenicsinput{schroll}
 \fenicsinput{hake}
-%%%\fenicsinput{lezar}
+\fenicsinput{lezar}
 \fenicsinput{mardal-4}
 \fenicsinput{rognes}
 
