--- a/book.tex
+++ b/book.tex
@@ -52,7 +52,7 @@
 %%%\fenicsinput{kirby-1}
 \fenicsinput{kirby-5}
 \fenicsinput{logg-3}
-%%%\fenicsinput{oelgaard-2}
+\fenicsinput{oelgaard-2}
 \fenicsinput{kirby-8}
 \fenicsinput{kirby-4}
 %%%\fenicsinput{hoffman-4}
