moved lopes to chapters and partially updated the dictionary

--- a/book.tex
+++ b/book.tex
@@ -78,7 +78,7 @@
 %%%\fenicsinput{hoffman-1}
 %%%\fenicsinput{selim}
 %%%\fenicsinput{shan}
-%%%\fenicsinput{lopes}
+\fenicsinput{lopes}
 \fenicsinput{kvs-2}
 \fenicsinput{hentschel}
 \fenicsinput{narayanan}
