--- a/bibliography.bib
+++ b/bibliography.bib
@@ -85,6 +85,14 @@
  year={2008},
 }
 
+@ELECTRONIC{Kirby1998,
+author= {James T. Kirby},
+title={FUNWAVE HOMEPAGE},
+year={1998},
+url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
+}
+
+
 @article{Kirby2009,
  title={Fast simplicial finite element algorithms using {B}ernstein polynomials},
  author={Kirby, R. C.},
