updates in the kirby-1 chapter

--- a/unfinished/kirby-1/chapter.tex
+++ b/unfinished/kirby-1/chapter.tex
@@ -203,7 +203,7 @@ weights,  much like a quadrature rule.
 
 %\kentc{Link this to the appropriate discussion in form/FFC/SFC chapters }
 
-\section{Mathematical Framework}
+\section{Mathematical framework}
 \subsection{Change of basis}
 
 %\editornote{Coordinate with notation in Chapter~\ref{chap:kirby-7} where $B$ is used for the Vandermonde matrix.
@@ -279,8 +279,8 @@ tensor-product structure.
 SyFi does, however, have support for rectangular domains, while  FIAT does not.
 
 \paragraph{Power basis.}
-On a line segment, the monomial or power basis is
-\( \{ x^i \}_{i=0}^{q} \) spans  $\P^1_q$  so that any \( \psi \in \P^1_q \) is written as
+On a line segment, the monomial or power basis 
+\( \{ x^i \}_{i=0}^{q} \) spans  $\P^1_q$,  so that any \( \psi \in \P^1_q \) can be written as
 \begin{equation}
 \label{pn1d}
 \psi = a_0 + a_1 x + \ldots a_q x^q = \sum^q_{i=0} a_i x^i.
@@ -381,7 +381,7 @@ Then, one defines
 \end{equation}
 Though it is not obvious from the definition, \( \psi_{ij}(x,y) \) is
 a polynomial in \( x \) and \( y \) of degree \( i + j \).  Moreover,
-for \( (ij) \neq (pq) \), \( \psi_{ij} \) is \( L^2 \)-orthogonal to \(
+for \( (i,j) \neq (p,q) \), \( \psi_{ij} \) is \( L^2 \)-orthogonal to \(
 \psi_{pq} \).
 
 \begin{figure}
@@ -439,7 +439,7 @@ application of finite element operators with complexity comparable to
 spectral elements.
 
 
-\paragraph{Homogeneous Polynomials.}
+\paragraph{Homogeneous polynomials.}
 \label{sec:homo:pol}
 
 Another set of polynomials which sometimes is useful is the set
@@ -453,7 +453,7 @@ with a similar definition in $d$D.
 
 
 
-\paragraph{Vector or Tensor valued Polynomials.}
+\paragraph{Vector or tensor valued polynomials.}
 It is straightforward to generalize the scalar valued polynomials discussed
 earlier to vector or tensor valued polynomials. Let $\{e_i\}$ be canonical
 basis in $\R^d$. Then a basis for the vector valued polynomials is
@@ -463,7 +463,7 @@ basis in $\R^d$. Then a basis for the vector valued polynomials is
 with a similar definition extending the basis to tensors.
 
 
-\section{Examples of Elements}
+\section{Examples of elements}
 
 We include some standard finite elements to illustrate the concepts. 
 We refer the reader to Chapter~\ref{chap:kirby-7} for a more thorough review of
@@ -566,7 +566,7 @@ The Raviart-Thomas function space in 2D is spanned by
 \left( \P^2_n \right)^2 \oplus
 \left(\begin{array}{c} x \\y \end{array} \right) \, \H^2_n, 
 \]
-Hence, this element requires a basis for vectors of polynomials  $\P^2_n$  enriched with 
+Hence, this element requires a basis for vectors of polynomials  $(\P^2_n)^2$  enriched with 
 $ \left(\begin{array}{c} x \\y \end{array} \right)  \, \H^2_n$.
 On the other hand,  the Brezzi-Douglas-Fortin-Marini on triangle is defined as  
 \begin{equation}
@@ -587,7 +587,7 @@ normal to the edges are set to zero. In a similar fashion, FIAT utilizes the ort
 \[
 \ell^C_i( u ) = \int_{E_i} (u \cdot n) \mu_n^i = 0,  
 \]
-where $\mu_n^i$ is second order Legendre polynomials on the edge $E_i$.  
+where $\mu_n^i$ is the second order Legendre polynomial on the edge $E_i$.  
 
 
 In general, assume that we have $m$ constraints and $n-m$ degrees of freedom.
@@ -631,7 +631,7 @@ Mardal-Tai-Winther~\citep{MardalTaiWinther2002},
 Tai-Winther~\citep{TaiWinther2006}, and Bell~\citep{Ciarlet2002} element families.
 
 
-\section{Operations on the Polynomial spaces}
+\section{Operations on the polynomial spaces}
 Here, we show how various important operations may be cast
 in terms of linear algebra operations, supposing that the operations may be performed on
 the original basis \( \{ \psi_i \}_{i=1}^{n} \).
@@ -644,7 +644,7 @@ at a given point \( x \in T \), one simply computes the vector
 \end{equation}
 followed by the product
 \begin{equation}
-\phi_i(x) \equiv \Phi_i = A_{ij} \Psi_j.
+\phi_i(x) \equiv \Phi_i = \alpha_{ij} \Psi_j.
 \end{equation}
 Generally, the nodal basis functions are required at an array of
 points \( \{ x_j \}_{j=1}^{m} \subset T \).  For performance reasons,
@@ -653,7 +653,7 @@ performing matrix-matrix products may be advantageous.  So, define
 Then all of the nodal basis functions may be evaluated by the
 product
 \begin{equation}
-\Phi_{ij} = A_{ik} \Psi_{kj}.
+\Phi_{ij} = \alpha_{ik} \Psi_{kj}.
 \end{equation}
 \subsection{Differentiation}
 Differentiation is more complicated and presents more options.
@@ -677,7 +677,7 @@ original basis functions \( \{ \psi_i \} \) to produce an array
 \end{equation}
 whence
 \begin{equation}
-\Phi^\alpha_i = A_{ij} \Psi^\alpha_i.
+\Phi^\alpha_i = \alpha_{ij} \Psi^\alpha_i.
 \end{equation}
 This presupposes that one may conveniently compute all derivatives of
 the \( \{ \psi_i \} \).  This is typically true in symbolic
