updates in the bib file

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -7074,16 +7074,18 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   number = {6}
 }
 
-@ARTICLE{RoldanHaughtonWiebenEtAl2008,
-  author = {Roldan, A. and Haughton, V. and Wieben, O. and Osswald, T. and Chesler,
+@ARTICLE{RoldanHaughtonWiebenEtAl2009,
+  author = {Roldan, A. and and Wieben, O. Haughton, V.  and Osswald, T. and Chesler, N,
 	N.},
   title = {Characterization of complex {CSF} hydrodynamics at the cranio-vertebral
 	junction with computational flow analysis: {H}ealthy and {C}hiari
 	{I} malformation},
-  note = {Submitted for publication},
-  year = {2008},
+  journal = {American Journal of Neuroradiology},
+  year = {2009},
+  volume = {30},
+  number = {5}, 
+  pages = {941--946}, 
   owner = {kent-and},
-  timestamp = {2009.06.08}
 }
 
 @BOOK{RoosStynesTobiska2008,
