--- a/book.tex
+++ b/book.tex
@@ -68,7 +68,7 @@
 %%%\fenicsinput{alnes-2}
 \fenicsinput{alnes-1}
 %%%\fenicsinput{hoffman-2}
-%%%\fenicsinput{mardal-2}
+\fenicsinput{mardal-2}
 
 \part{Applications}
 
