--- a/book.tex
+++ b/book.tex
@@ -65,7 +65,7 @@
 %%%\fenicsinput{kirby-2}
 \fenicsinput{wilbers}
 \fenicsinput{alnes-3}
-%%%\fenicsinput{alnes-2}
+\fenicsinput{alnes-2}
 \fenicsinput{alnes-1}
 %%%\fenicsinput{hoffman-2}
 \fenicsinput{mardal-2}
