--- a/unfinished/kirby-2/chapter.tex
+++ b/unfinished/kirby-2/chapter.tex
@@ -7,36 +7,37 @@
 \section{Introduction}
 
 The FIAT project~\cite{Kir04,Kir06} implements the mathematical
-framework described in Chapter~\ref{} as a Python package, working
+framework described in Chapter~\ref{kirby-1} as a Python package, working
 mainly in terms of numerical linear algebra.  Although an
-implementation floating-point arithmetic presents some challenges
-relative to symbolic computation, it can allow greater efficiency and
-consume fewer resources, especially for high order elements.  To
+implementation in floating-point arithmetic presents some challenges
+relative to symbolic computation, it can allow greater efficiency in terms of work and memory usage, especially for high order elements.  To
 obtain efficiency in Python, the compute-intensive operations are
 expressed in terms of numerical linear algebra and performed using the
 widely distributed \texttt{numpy} package.
 
-The FIAT project is one of the first FEniCS projects, providing the
+FIAT is one of the first FEniCS projects, providing the
 basis function back-end for \texttt{ffc} and enabling high-order
 \( H^1 \),
 \( H(\mathrm{div}) \) and \( H(\mathrm{curl}) \) elements. It is widely
 distributed, with downloads on every inhabited continent and in over
 sixty countries, averaging  about 100 downloads per month.
 
-This chapter works in the context of a Ciarlet triple \( (K,P,N) \)~\cite{Ciarlet1978},
-where \( K \) is a fixed reference domain, typically a triangle or
+This chapter works in the context of a Ciarlet triple \( (T,P,\mathcal{L}) \)~\cite{Ciarlet1978},
+where \( T \) is a fixed reference domain, typically a triangle or
 tetrahedron.  \( P \) is a finite-dimensional polynomial space, though
 perhaps vector- or tensor-valued and not coincident with polynomials
-of some fixed degree.  \( N = \{ \ell_i \}_{i=1}^{|P|} \) is a set of linear functionals spanning
-\( P^\prime \).  Recalling Chapter~\cite{missing}, the goal is first to
+of some fixed degree.  \( \mathcal{L} = \{ \ell_i \}_{i=1}^{|P|} \) is a set of linear functionals spanning
+\( P^\prime \).  Recalling Chapter~\cite{kirby-1}, the goal is first to
 enumerate a convenient basis \( \{ \phi_i \}_{i=1}^{|P|} \) for \( P
 \) and then to form a generalized Vandermonde system
 \[
 V A = I,
 \]
-where \( V_{ij} = \ell_i( \phi_j) \).
+where \( V_{ij} = \ell_i( \phi_j) \).  Of course, forming this matrix
+requires some calculations, and we will discuss this further in a
+later section.
 The columns of \( A = V^{-1} \) store the expansion coefficients of
-the nodal basis for \( (K,P,N) \) in terms of the basis \( \{ \phi_i
+the nodal basis for \( (T,P,\mathcal{L}) \) in terms of some basis \( \{ \phi_i
 \} \).
 
 
@@ -46,25 +47,24 @@ evaluation algorithms.  FIAT uses the so-called collapsed-coordinate
 polynomials~\cite{KarShe99} on the triangle and tetrahedra.  Let
 \(P^{\alpha,\beta}_i(x) \) denote the Jacobi polynomial of degree \( i
 \) with weights \( \alpha \) and \( \beta \).
-On the triangle \( K \)
-with vertices \( (-1,1) \), \((1,-1) \), \( (-1,1) \), the
+On the triangle \( T \)
+with vertices \( (-1,-1) \), \((1,-1) \), \( (-1,1) \) and Cartesian coordinates \( x\) and \( y \), the
 polynomials are of the form
 \[
   D^{p,q}( x,y ) = P^{0,0}_{p}(\eta_1)  \left( \frac{1-\eta_2}{2}
-  \right)^i P^{2i+1,0}_j(\eta_2)
+  \right)^p P^{2p+1,0}_q(\eta_2).
 \]
-where
+Here, \( \eta_1 \) and \( \eta_2 \) are the Cartesian coordinates on the biunit square, and the so-called collapsed-coordinate mapping
 \[
 \begin{split}
 \eta_1 & = 2\left( \frac{1+x}{1-y} \right) - 1\\
 \eta_2 & = y
 \end{split}
 \]
-is called the collapsed-coordinate mapping is a singular
-transformation between the triangle and the biunit
-square.  The set \( \{ D^{p,q}( x,y) \}_{p,q \geq 0}^{p+q\leq n} \)
-forms a basis for polynomoials of degree \( n \).  Moreover, they are
-orthogonal in the \( L^2(K) \) inner product.
+maps from the triangle to the square.
+The set \( \{ D^{p,q}( x,y) \}_{p,q \geq 0}^{p+q\leq n} \)
+forms a basis for polynomials of degree \( n \).  Moreover, they are
+orthogonal in the \( L^2(T) \) inner product.
 Recently~\cite{Kir09}, it has been shown that these polynomials
 may be computed directly on the triangle without reference to the
 singular mapping.  This means that no special treatment of the
@@ -90,7 +90,21 @@ sum-factorization techniques.  More importantly for present purposes,
 each \( \chi^p \) is in fact a polynomial in \( x \) and \( y \) and
 may be computed by recurrence.  \( \psi^{p,q} \) is just a Jacobi
 polynomial in \( y \) and so has a well-known three-term recurrence.
-The recurrences derived in~\cite{Kir09} are presented in Algorithm~\ref{dubalg}
+The recurrences derived in~\cite{Kir09} are presented in Algorithm~\ref{dubalg},
+where, the coefficients \( a_n^{\alpha,\beta},b_n^{\alpha,\beta},c_n^{\alpha,\beta} \) refer to those  used in the Jacobi polynomial recurrences.
+\begin{equation}
+\label{eq:recurcoeff}
+\begin{split}
+a^{\alpha,\beta}_n 
+& = \frac{(2n + 1 + \alpha + \beta)(2n + 2 + \alpha + \beta)}
+             {2(n+1)(n+1+\alpha+\beta)}\\
+b^{\alpha,\beta}_n 
+& = \frac{(\alpha^2 -\beta^2)(2n+1+\alpha+\beta)}
+             {2(n+1)(2n+\alpha+\beta)(n+1+\alpha+\beta)}\\
+c^{\alpha,\beta}_n & = \frac{(n+\alpha)(n+\beta)(2n+2+\alpha+\beta)}
+             {(n+1)(n+1+\alpha+\beta)(2n+\alpha+\beta)}.
+\end{split}
+\end{equation}
 \begin{algorithm}
 \caption{Computes all triangular orthogonal polynomials up to degree
   \( d \) by recurrence}
@@ -132,8 +146,9 @@ numerical computation into  optimized library routines, since
 Since polynomials and
 functionals over polynomials both form vector spaces, it is natural
 to represent each of them as vectors representing expansion
-coefficients in some basis.  So, let \( \{ \phi_i \} \) be the set of
-polynomials described above.
+coefficients in some basis.  So, let \( \{ \phi_i \} \) be the Dubiner polynomials
+polynomials described above, where we have assumed some linear
+indexing of the Dubiner polynomials.
 
 Now, any \( p \in P \) is written as a linear combination of the basis
 functions \( \{ \phi_i \} \).  Introduce a mapping \( \mathcal{R} \)
@@ -145,7 +160,7 @@ p = \mathcal{R}(p)_i \phi_i,
 where summation is implied over \( i \).
 
 A polynomial \( p \) may then be evaluated at a point \( x \) as
-follows.  Let \( \Phi_i \) be the basis functions tabulated at \( x
+follows.  Let \( \Phi \) be the vector of basis functions tabulated at \( x
 \).  That is,
 \begin{equation}
 \label{eq:bigphi}
@@ -158,7 +173,7 @@ p(x) = \mathcal{R}(p)_i \Phi_i.
 \end{equation}
 
 More generally in FIAT, a set of polynomials \( \{ p_i \} \) will need
-to be evaulated simultaneously, such as evaluating all of the members
+to be evaluated simultaneously, such as evaluating all of the members
 of a finite element basis.
 The coefficients of the set of
 polynomials may be stored in the rows of a matrix \( C \), so
@@ -175,7 +190,7 @@ p_i(x) = C_{ij} \Phi_j.
 
 The basis functions are typically needed at a set of points, such as
 those of a quadrature rule.  Let \( \{
-x_j \} \) now be a collection of points in \( K \) and let
+x_j \} \) now be a collection of points in \( T \) and let
 \[
 \Phi_{ij} = \phi_i(x_j),
 \]
@@ -186,7 +201,7 @@ polynomials may be tabulated at all the points by
 p_i(x_j) = C_{ik} \Phi_{kj},
 \]
 which is just the matrix product \( C \Phi \) and may
-may be efficiently carried out by a library operation,
+be efficiently carried out by a library operation,
 such as the \texttt{numpy.dot} wrapper to level 3 BLAS.
 
 Finite element computation also requires the evaluation of derivatives
@@ -194,11 +209,11 @@ of polynomials.  In a symbolic context, differentiation presents no
 particular difficulty, but working in a numerical context requires
 some special care.
 
-For some differential operator \( D \), the derivatives
-\( D \phi_i \) are computed at apoint \( x \), any polynomial
+For some differential operator \( \partial \), the derivatives
+\( \partial \phi_i \) are computed at a point \( x \), any polynomial
 \( p = \mathcal{R}(p)_i \phi_i \) may be differentiated at \( x \) by
 \[
-Dp(x) = \mathcal{R}(p)_i (D\phi_i),
+\partial p(x) = \mathcal{R}(p)_i (\partial \phi_i),
 \]
 which is exactly analagous to~(\ref{eq:doteval}).  By analogy, sets of
 polynomials may be differentiated at sets of points just like
@@ -208,45 +223,50 @@ The formulae in Algorithm~\ref{dubalg} and their tetrahedral counterpart are
 fairly easy to differentiate, but derivatives may also be obtained through
 automatic differentiation.  Some experimental support for this using
 the AD tools in Scientific Python has been developed in an unreleased
-version of FIAT.
+version of FIAT.  Either of these techniques may be used to obtain 
 
 The released version of FIAT currently evaluates derivatives in terms
 of linear operators, which allows the coordinate singularity in the
 standard recurrence relations to be avoided.  For each Cartesian
 partial derivative \( \frac{\partial}{\partial x_k} \), a matrix \(
-D^k \) is calculated such that
+\partial^k \) is calculated such that
 \[
 \mathcal{R}\left(\frac{\partial p}{\partial x_k}\right)_i
-= D^k_{ij} \mathcal{R}(p)_j.
+= \partial^k_{ij} \mathcal{R}(p)_j.
 \]
 Then, derivatives of sets of polynomials may be tabulated by
-premultiplying the coefficient matrix \( C \) with such a \( D^k \) matrix.
+premultiplying the coefficient matrix \( C \) with such
+a \( \partial^k \) matrix.  These matrices are constructed by
+tabulating the partial derivatives of the Dubiner bases at a lattice
+of points and then multiplying by a Vandermonde-type matrix that
+converts the lattice point values to the expansion coefficients back
+in the Dubiner basis.
 
 This paradigm may also be extended to vector- and tensor-valued
 polynomials, making use of the multidimensional arrays implemented in
 \texttt{numpy}.  Let \( P \) be a space of scalar-valued polynomials and
-\( n > 0 \) an integer.  Then, a member of \( (P)^m \), a vector with
+\( m > 0 \) an integer.  Then, a member of \( (P)^m \), a vector with
 \( m \) components in \( P \), may be represented as a two-dimensional
-array.  Let \( p \in (P)^m \) and \( p^i \) be the \( j^\mathrm{th} \)
-component of \( p \).  Then \( p = \mathcal{R}(p)_{jk} \phi_k \), so
+array.  Let \( p \in (P)^m \) and \( p^j \) be the \( j^\mathrm{th} \)
+component of \( p \).  Then \( p^j = \mathcal{R}(p)_{jk} \phi_k \), so
 that \( \mathcal{R}(p)_{jk} \) is the coefficient of \( \phi_k \) for
 \( p^j \).
 
 The previous discussion of tabulating collections of functions at
 collections of points is naturally extended to this context.  If \( \{
-p_i \} \) is a set of members of \( P^m \), then their coefficients
+p_i \} \) is a set of members of \( (P)^m \), then their coefficients
 may be stored in an array \( C_{ijk} \), where \( C_i \) is the
 two-dimensional array \( \mathcal{R}(p)_{jk} \) of coefficients for \(
 p_i \).  As before, \( \Phi_{ij} = \phi_i(x_j) \) contains the of
 basis functions at a set of points.  Then, the \( j^\mathrm{th} \)
-component of \( v_i \) at the point \( x_k \) is naturally given by a
+component of \( p \) at the point \( x_k \) is naturally given by a
 three-dimensional array
 \[
 p_i(x_k)^j = C_{ijl} \phi_{lk}.
 \]
-Psychologically, this is just a matrix product if \( C_{ijl} \)
-is stored contiguously in generalized row-major format, and the
-operation is readly cast as dense matrix multiplication.
+If \( C_{ijl} \)
+is stored contiguously in generalized row-major format, this is just a
+matrix productand the, and no data motion is required to use a library call. 
 
 Returning for the moment to scalar-valued polynomials, linear
 functionals may also be represented as
@@ -272,14 +292,14 @@ adjoint of \( \mathcal{R} \).
 
 Just as with evaluation, sets of linear functionals can be applied to
 sets of functions via matrix multiplication.  Let \( \{ \ell_i
-\}_{i=1}^N \subset P^\prime \) and \( \{ u_i \}_{i=1}^N \subset P \).
+\}_{i=1}^N \subset P^\prime \) and \( \{ p_i \}_{i=1}^N \subset P \).
 The functionals are represented by a matrix
 \[
 L_{ij} = \mathcal{R}^\prime(\ell_i)_j
 \]
 and the functions by
 \[
-C_{ij} = \mathcal{R}(u_i)_j
+C_{ij} = \mathcal{R}(p_i)_j
 \]
 Then, evaluating all of the functionals on all of the functions is
 computed by the matrix product
@@ -287,7 +307,7 @@ computed by the matrix product
 A_{ij} = L_{ik}C_{jk},
 \end{equation}
 or \( A = L C^t \).  This is especially useful in the setting of the
-next section, where the basis for the finite element spaceneeds to be
+next section, where the basis for the finite element space needs to be
 expressed as a linear combination of orthogonal polynomials.
 
 Also, the formalism of \( \mathcal{R}^\prime \) may be generalized to
@@ -295,7 +315,7 @@ functionals over vector-valued spaces.  As before, let \( P \) be a
 space of degree \( n \) with basis \( \{ \phi_i \}_{i=1}^{|P|} \) and
 to each \( v \in (P)^m \) associate the representation \( v^i
 = \mathcal{R}(v)_{ij}\phi_j \).  In this notation,
-\( v = \mathcal{R}(v)_{ij} \phi_j \) is the vector indexed over \( i \).
+\( v^i = \mathcal{R}(v)_{ij} \phi_j \) is the vector indexed over \( i \).
 For any functional
 \( \ell \in \left( \left(P\right)^m \right)^\prime \), a
 representation \( \mathcal{R}^\prime(\ell)_{ij} \) must be defined
@@ -304,7 +324,7 @@ such that
 \ell(v) = \mathcal{R}^\prime(\ell)_{ij} \mathcal{R}(v)_{ij},
 \]
 with summation implied over \(i\) and \( j\).  To determine the
-representation of \( \mathcal{R}^\prime(f) \), let \( e^j \) be the
+representation of \( \mathcal{R}^\prime(\ell) \), let \( e^j \) be the
 canonical basis vector with \( (e^j)_i = \delta_{ij} \) and
 write
 \begin{equation}
@@ -338,26 +358,25 @@ second and third axes.
 
 
 \section{Other polynomial spaces}
-Many of the complicated elements that motivate the development of a
-tool like FIAT polynomial spaces that are not polynomials of
-some complete degree (or vectors or tensors of such).   Once
-a process for providing bases for such spaces is described, the
-techniques of the previous section may be applied directly.  Most
-finite element polynomial spaces are described either by adding a few
+Besides polynomial spaces of some fixed, complete degree, FIAT 
+is motived by more complicated spaces.  Once some basis for such
+spaces is obtained, the preceding techniques apply directly.  
+Most finite element polynomial spaces may described either by adding a few
 basis functions to some polynomials of complete degree or else by
-constraining such a space by some linear functionals.
+constraining such a space by some linear functionals.  We describe
+such techniques in this section.
 
 \subsection{Supplemented polynomial spaces}
 A classic example of the first case is the Raviart-Thomas element,
 where the function space of order \(r \) is
 \[
-RT_r = \left( P_r(K) \right)^d \oplus \left( \tilde{P}_r(K) \right) x,
+RT_r = \left( P_r(T) \right)^d \oplus \left( \tilde{P}_r(T) \right) x,
 \]
 where \( x \in \mathbb{R}^d \) is the coordinate vector and
 \( \tilde{P}_r \) is the space of homogeneous polynomials of degree \(
 r \).
-Given any basis \( \{ \phi_i \} \) for \( P_r(K) \) such as the
-Dubiner basis, it is easy to obtain a basis for \( (P_r(K))^d \) by
+Given any basis \( \{ \phi_i \} \) for \( P_r(T) \) such as the
+Dubiner basis, it is easy to obtain a basis for \( (P_r(T))^d \) by
 taking vectors where one component is some \( \phi_i \) and the rest
 are zero.  The issue is obtaining a basis for the entire space.
 
@@ -365,7 +384,7 @@ Consider the case \( d = 2 \) (triangles).  While monomials of the
 form
 \(
 x^i y^{r-i}
-\) span the space of homoegeneous
+\) span the space of homogeneous
 polynomials, they are subject to ill-conditioning in numerical computations.
 On the other hand, the Dubiner basis
 of order \( r \), \( \{ \phi_i \}_{i=1}^{|P_r|} \)
@@ -373,11 +392,11 @@ may be ordered so that the last \( r + 1 \) functions,
 \( \{ \phi_i \}_{i=|P_r|-r}^{|P_r|} \), have degree exactly \( r \).
 While they do not span \( \tilde{P}_r \), the span of
 \( \{ x \phi_i \}_{i=|P_r|-r}^{|P_r|} \) together with a basis for \(
-(P_r(K))^2 \) does span \( RT_r \).
+(P_r(T))^2 \) does span \( RT_r \).
 
 So, this gives a basis for the Raviart-Thomas space that can be
-evaluated and differentiated using the recurrence relations described
-above.  A similar technique may be used to construct elements that
+evaluated and differentiated using the recurrence relations in Algorithm~\ref{dubalg}.
+A similar technique may be used to construct elements that
 consist of standard elements augmented with some kind of bubble
 function, such as
 the PEERS element of elasticity or MINI element for Stokes flow.
@@ -385,37 +404,37 @@ the PEERS element of elasticity or MINI element for Stokes flow.
 
 \subsection{Constrained polynomial spaces}
 An example of the second case is the Brezzi-Douglas-Fortin-Marini
-element~\cite{BreFor91}.  Let \( \mathcal{E}(K) \) be the set of dimension one
-cofacets of \( K \) (edges in 2d, faces in 3d).  Then the function
+element~\cite{BreFor91}.  Let \( \mathcal{E}(T) \) be the set of dimension one
+cofacets of \( T \) (edges in 2d, faces in 3d).  Then the function
 space is
 \[
-BDFM_r(K) = \{ u \in (P_r(K))^d : u\cdot n|_{\gamma} \in
-P_{r-1}(\gamma), \, \, \, \gamma \in \mathcal{E}(K) \}
+BDFM_r(T) = \{ u \in (P_r(T))^d : u\cdot n|_{\gamma} \in
+P_{r-1}(\gamma), \, \, \, \gamma \in \mathcal{E}(T) \}
 \]
 
 This space is naturally interpreted as taking a function space,
-\( (P_r(K))^d \), and imposing linear constraints.  For the case \( d
+\( (P_r(T))^d \), and imposing linear constraints.  For the case \( d
 = 2 \), there are exactly three such constraints.  For \( \gamma
-\in \mathcal{E}(K) \), let \( \mu^\gamma \) be the Legendre polynomial
+\in \mathcal{E}(T) \), let \( \mu^\gamma \) be the Legendre polynomial
 of degree \( r \) mapped to \( \gamma \).  Then, if a function \( u
-\in (P_r(K))^d \), it is in \( BDFM_r(K) \) iff
+\in (P_r(T))^d \), it is in \( BDFM_r(T) \) iff
 \[
 \int_{\gamma} ( u \cdot n ) \mu^\gamma \, ds = 0
 \]
-for each \( \gamma \in \mathcal{E}(K) \).
+for each \( \gamma \in \mathcal{E}(T) \).
 
 Number the edges by \( \{ \gamma_i \}_{i=1}^3 \) and introduce
 linear functionals \\
 \( \ell_i(u) = \int_{\gamma_i} (u \cdot n)
 \mu^{\gamma_i} \, ds \).  Then,
 \[
-BDFM_r(K) = \cap_{i=1}^3 \mathrm{null}(\ell_i).
+BDFM_r(T) = \cap_{i=1}^3 \mathrm{null}(\ell_i).
 \]
 This may naturally be cast into linear algebra and so evaluated with
 LAPACK.  Following the
 techniques for constructing Vandermonde matrices, a \emph{constraint
   matrix} may be constructed.  Let \( \{ \bar{\phi}_i \} \) be a basis
-for \( (P_r(K))^2 \).  Define the \( 3 \times |(P_r)|^2 \) matrix
+for \( (P_r(T))^2 \).  Define the \( 3 \times |(P_r)|^2 \) matrix
 \[
 C_{ij} = \ell_i( \phi_j ).
 \]
@@ -423,8 +442,8 @@ Then, a basis for the null space of this matrix is constructed using
 the singular value decomposition~\cite{GolVan96}.  The vectors of this
 null-space basis are readily seen to contain the expansion
 coefficients of a basis for \( BDFM_r \) in terms of a basis for
-\( P_r(K)^2 \).  With this basis in hand,
-the nodal basis for \( BDFM_r(K) \) is obtained by constructing the
+\( P_r(T)^2 \).  With this basis in hand,
+the nodal basis for \( BDFM_r(T) \) is obtained by constructing the
 generalized Vandermonde matrix.
 
 This technique may be generalized to three dimensions, and it also
@@ -440,7 +459,7 @@ associated with which entities of the reference element.  This
 information is required when local-global mappings are generated by a
 form compiler such as \texttt{ffc}.
 
-The topological information is provided by a graded incidence relation
+The topological information is provided by a ``graded incidence relation''~\cite{Kirby2006a,KnepleyKarpeev21007}
 and is similar to the presentation of finite element meshes in~\cite{Log09}.
 Each entity in the reference element is
 labeled by its topological dimension (e.g. 0 for vertices and 1 for
@@ -495,7 +514,7 @@ For example, pointwise evaluation at a point \( x \) is simply
 represented by the coordinates of \( x \) together with a weight of
 1. If the functional is an integral moment, such as
 \[
-\ell( f ) = \int_K g f \, dx,
+\ell( f ) = \int_T g f \, dx,
 \]
 then the points \( \{ x_i \} \) will be those of some quadrature rule
 and the weights will be \( w_i = \omega_i g(x_i) \), where the \(
@@ -538,7 +557,7 @@ FIAT to be parametrized over the particular reference element shape
 and topology.
 
 The function space \( P \) is modelled by the base class
-\texttt{PolynomialSet}, while  contains a rule for
+\texttt{PolynomialSet}, which contains a rule for
 constructing the base polynomials \( \phi_i \) (e.g. the Dubiner
 basis) and a multidimensional
 array of expansion coefficients for the basis of \( P \).  Special
@@ -570,7 +589,7 @@ Vandermonde matrix.
 Beyond this basic finite element structure, FIAT provides quadrature
 such as Gauss-Jacobi rules in one dimension and
 collapsed-coordinate rules in higher dimensions.  It also provides
-routines for constructing lattices of points on eah of the reference
+routines for constructing lattices of points on each of the reference
 element shapes and their facets.
 
 In the future, FIAT will include the developments discussed already
@@ -582,3 +601,21 @@ we hope to expand the collection of quadrature
 rules and provide more advanced point distributions, such as
 Warburton's warp-blend points~\cite{War05}.
 
+Finally, we may group the classes used in FIAT into several kinds, and
+the relationship between these kinds of classes is expressed in Figure~\ref{fig:struct}.
+Top-level classes implement particular finite elements, such as
+Lagrange or Raviart-Thomas.  These depend on classes that implement
+the underlying reference shapes, polynomial sets, and dual bases.  The
+polynomial sets are linear combinations of orthogonal expansions.
+Sometimes those linear combinations are constructed via projection
+(requiring quadrature) or null spaces of linear functionals.
+Dual bases are collections of linear functionals that can act on a
+polynomial set over some domain.
+
+\begin{figure}[h]
+  \label{fig:struct}
+  \begin{center}
+    \includegraphics[width=4cm]{chapters/kirby-2/pdf/struct.pdf}
+    \caption{General relationship between the kinds of classes in FIAT.}
+  \end{center}
+\end{figure}
