Add and edit kirby-2 chapter.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,6 +1,16 @@
 % This file was created with JabRef 2.6.
 % Encoding: UTF8
 
+@article{KnepleyKarpeev2009,
+  title={Mesh algorithms for {PDE} with {S}ieve {I}: {M}esh distribution},
+  author={Knepley, M. G. and Karpeev, D. A.},
+  journal={Scientific Programming},
+  volume={17},
+  number={3},
+  pages={215--230},
+  year={2009},
+}
+
 @article {Dubiner1991,
   AUTHOR = {Dubiner, Moshe},
   TITLE = {Spectral methods on triangles and other domains},
