--- a/book.tex
+++ b/book.tex
@@ -62,7 +62,7 @@
 %%%\fenicsinput{logg-2}
 \fenicsinput{logg-1}
 \fenicsinput{kirby-3}
-%%%\fenicsinput{kirby-2}
+\fenicsinput{kirby-2}
 \fenicsinput{wilbers}
 \fenicsinput{alnes-3}
 \fenicsinput{alnes-2}
